--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,7 +1,13 @@
-set -g prefix ^T
 set bell-action none
+
+set -g prefix ^T
 set -g status-bg white
 set -g status-fg black
+
+setw -g window-status-current-bg blue
+setw -g window-status-current-fg white
+setw -g window-status-current-attr bold
 setw -g mode-keys vi
 
+bind ^c new-window
 bind ^t last-window
