--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "dot.vim/bundle/vimwiki"]
 	path = dot.vim/bundle/vimwiki
 	url = git://github.com/vim-scripts/vimwiki.git
+[submodule "dot.vim/bundle/EnhCommentify"]
+	path = dot.vim/bundle/EnhCommentify
+	url = git://github.com/vim-scripts/EnhCommentify.vim
