--- a/.gitmodules
+++ b/.gitmodules
@@ -1,75 +1,6 @@
 [submodule "dot.config/awesome/vicious"]
 	path = dot.config/awesome/vicious
 	url = http://git.sysphere.org/vicious
-[submodule "dot.vim/bundle/vim-coffee-script"]
-	path = dot.vim/bundle/vim-coffee-script
-	url = git://github.com/kchmck/vim-coffee-script.git
-[submodule "dot.vim/bundle/vim-rails"]
-	path = dot.vim/bundle/vim-rails
-	url = git://github.com/tpope/vim-rails.git
-[submodule "dot.vim/bundle/vim-haml"]
-	path = dot.vim/bundle/vim-haml
-	url = git://github.com/tpope/vim-haml.git
-[submodule "dot.vim/bundle/vim-ruby"]
-	path = dot.vim/bundle/vim-ruby
-	url = git://github.com/vim-ruby/vim-ruby.git
-[submodule "dot.vim/bundle/vim-surround"]
-	path = dot.vim/bundle/vim-surround
-	url = git://github.com/kana/vim-surround.git
-[submodule "dot.vim/bundle/vim-endwise"]
-	path = dot.vim/bundle/vim-endwise
-	url = git://github.com/tpope/vim-endwise.git
-[submodule "dot.vim/bundle/vim-fakeclip"]
-	path = dot.vim/bundle/vim-fakeclip
-	url = git://github.com/kana/vim-fakeclip.git
-[submodule "dot.vim/bundle/vim-textobj-indent"]
-	path = dot.vim/bundle/vim-textobj-indent
-	url = git://github.com/kana/vim-textobj-indent.git
-[submodule "dot.vim/bundle/vim-textobj-user"]
-	path = dot.vim/bundle/vim-textobj-user
-	url = git://github.com/kana/vim-textobj-user.git
-[submodule "dot.vim/bundle/vim-textobj-syntax"]
-	path = dot.vim/bundle/vim-textobj-syntax
-	url = git://github.com/kana/vim-textobj-syntax.git
-[submodule "dot.vim/bundle/vim-javascript"]
-	path = dot.vim/bundle/vim-javascript
-	url = git://github.com/pangloss/vim-javascript.git
-[submodule "dot.vim/bundle/vim-textobj-jabraces"]
-	path = dot.vim/bundle/vim-textobj-jabraces
-	url = git://github.com/kana/vim-textobj-jabraces.git
-[submodule "dot.vim/bundle/vim-textobj-lastpat"]
-	path = dot.vim/bundle/vim-textobj-lastpat
-	url = git://github.com/kana/vim-textobj-lastpat.git
-[submodule "dot.vim/bundle/tabular"]
-	path = dot.vim/bundle/tabular
-	url = git://github.com/godlygeek/tabular.git
-[submodule "dot.vim/bundle/vim-matchit"]
-	path = dot.vim/bundle/vim-matchit
-	url = git://github.com/edsono/vim-matchit.git
-[submodule "dot.vim/bundle/vim-speeddating"]
-	path = dot.vim/bundle/vim-speeddating
-	url = git://github.com/tpope/vim-speeddating.git
-[submodule "dot.vim/bundle/vim-ragtag"]
-	path = dot.vim/bundle/vim-ragtag
-	url = git://github.com/tpope/vim-ragtag.git
-[submodule "dot.vim/bundle/neocomplcache"]
-	path = dot.vim/bundle/neocomplcache
-	url = git://github.com/Shougo/neocomplcache.git
-[submodule "dot.vim/bundle/vim-autocomplpop"]
-	path = dot.vim/bundle/vim-autocomplpop
-	url = git://github.com/vim-scripts/AutoComplPop.git
-[submodule "dot.vim/bundle/vim-fuzzyfinder"]
-	path = dot.vim/bundle/vim-fuzzyfinder
-	url = git://github.com/vim-scripts/FuzzyFinder.git
-[submodule "dot.vim/bundle/rename"]
-	path = dot.vim/bundle/rename
-	url = git://github.com/vim-scripts/Rename.git
-[submodule "dot.vim/bundle/zoomwin"]
-	path = dot.vim/bundle/zoomwin
-	url = git://github.com/vim-scripts/ZoomWin.git
-[submodule "dot.vim/bundle/vimwiki"]
-	path = dot.vim/bundle/vimwiki
-	url = git://github.com/vim-scripts/vimwiki.git
-[submodule "dot.vim/bundle/EnhCommentify"]
-	path = dot.vim/bundle/EnhCommentify
-	url = git://github.com/vim-scripts/EnhCommentify.vim
+[submodule "dot.vim/vundle.git"]
+	path = dot.vim/vundle.git
+	url = http://github.com/gmarik/vundle.git
