--- a/dot.config/sakura/sakura.conf
+++ b/dot.config/sakura/sakura.conf
@@ -1,11 +1,11 @@
 
 [sakura]
-forecolor=#c0c0c0
+forecolor=#ffffff
 backcolor=#000000
-opacity_level=80
-fake_transparency=No
+opacity_level=75
+fake_transparency=Yes
 background=none
-font=Monospace 9
+font=Monospace 10
 show_always_first_tab=No
 scrollbar=false
 closebutton=false
@@ -27,3 +27,6 @@ copy_key=C
 paste_key=V
 scrollbar_key=S
 fullscreen_key=F11
+backalpha=49151
+blinking_cursor=Yes
+new_window_key=N
