--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dot.config/awesome/vicious"]
 	path = dot.config/awesome/vicious
 	url = http://git.sysphere.org/vicious
-[submodule "dot.vim/vundle.git"]
-	path = dot.vim/vundle.git
-	url = http://github.com/gmarik/vundle.git
+[submodule "dot.vim/bundle/vundle"]
+	path = dot.vim/bundle/vundle
+	url = git://github.com/gmarik/vundle.git
