--- a/playbooks/tasks/xvfb.yml
+++ b/playbooks/tasks/xvfb.yml
@@ -1,2 +1,2 @@
-- file: path=~/.config/systemd/user state=directory recurse=yes
-- copy: src=../files/Xvfb.service dest=~/.config/systemd/user/Xvfb.service
+- file: path=~/.config/systemd/user state=directory
+- copy: src=Xvfb.service dest=~/.config/systemd/user/Xvfb.service
