--- a/playbooks/base.yml
+++ b/playbooks/base.yml
@@ -3,11 +3,11 @@
   tasks:
     - include: tasks/dispatch-conf.yml
     - include: tasks/efi_stub.yml
-    #- include: tasks/eix.yml
+    - include: tasks/eix.yml
     - include: tasks/ipv6_privacy_extensions.yml
-    #- include: tasks/thinkpad.yml
 
 - hosts: localhost
   sudo: no
   tasks:
+    - include: tasks/home.yml
     - include: tasks/xvfb.yml
