Use diff-highlight

--- a/playbooks/files/home/.gitconfig
+++ b/playbooks/files/home/.gitconfig
@@ -28,4 +28,8 @@
 [heroku]
 	account = ursm
 [ghq]
-	root = /home/ursm/src
+	root = ~/src
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
