--- a/playbooks/base.yml
+++ b/playbooks/base.yml
@@ -1,7 +1,11 @@
 - hosts: localhost
   sudo: yes
+  vars:
+    overlays:
+      bronislav: https://github.com/bronislav/overlays/raw/master/layman.xml
   tasks:
     - include: tasks/dispatch-conf.yml
     - include: tasks/efi_stub.yml
     - include: tasks/eix.yml
     - include: tasks/ipv6_privacy_extensions.yml
+    - include: tasks/overlays.yml
