--- a/playbooks/base.yml
+++ b/playbooks/base.yml
@@ -8,4 +8,4 @@
     - include: tasks/efi_stub.yml
     - include: tasks/eix.yml
     - include: tasks/ipv6_privacy_extensions.yml
-    - include: tasks/overlays.yml
+    - include: tasks/portage.yml
