Do not copy esm.conf on remote environment

--- a/playbooks/tasks/esm-overlay.yml
+++ b/playbooks/tasks/esm-overlay.yml
@@ -1,2 +1,5 @@
 - file: path={{ansible_env.HOME}}/src/github.com/esminc state=directory
 - git: repo=git@github.com:esminc/esm-overlay.git dest={{ansible_env.HOME}}/src/github.com/esminc/esm-overlay
+
+- file: dest=/etc/portage/repos.conf state=directory
+- copy: src=repos.conf/esm.conf dest=/etc/portage/repos.conf mode=0644
