--- a/playbooks/tasks/portage.yml
+++ b/playbooks/tasks/portage.yml
@@ -5,5 +5,5 @@
 
 - get_url: dest=/etc/layman/overlays/{{item.key}}.xml mode=0644 url={{item.value}}
   with_dict: overlays
-- layman: name={{item.key}}
+- layman: name={{item.key}} list_url={{item.value}}
   with_dict: overlays
