--- a/playbooks/remote.yml
+++ b/playbooks/remote.yml
@@ -1,7 +1,7 @@
 - include: base.yml
 
 - hosts: localhost
-  sudo: yes
+  become: yes
   vars:
     overlays:
       bronislav: https://raw.githubusercontent.com/bronislav/overlays/master/layman.xml
