Use git:// protocol

--- a/playbooks/files/repos.conf/esm.conf
+++ b/playbooks/files/repos.conf/esm.conf
@@ -1,5 +1,5 @@
 [esm]
 location = /home/ursm/src/github.com/esminc/esm-overlay
 sync-type = git
-sync-uri = https://github.com/esminc/esm-overlay
+sync-uri = git://github.com/esminc/esm-overlay
 auto-sync = no
