--- a/playbooks/files/repos.conf/gentoo.conf
+++ b/playbooks/files/repos.conf/gentoo.conf
@@ -1,5 +1,5 @@
 [gentoo]
 location = /usr/portage
 sync-type = git
-sync-uri = https://github.com/gentoo-mirror/gentoo.git
+sync-uri = git://github.com/gentoo-mirror/gentoo.git
 auto-sync = yes
