--- a/playbooks/tasks/esm-overlay.yml
+++ b/playbooks/tasks/esm-overlay.yml
@@ -1,5 +1,5 @@
 - file: path={{ansible_env.HOME}}/src/github.com/esminc state=directory
-- git: repo=git@github.com:esminc/esm-overlay.git dest={{ansible_env.HOME}}/src/github.com/esminc/esm-overlay
+- git: repo=git://github.com/esminc/esm-overlay.git dest={{ansible_env.HOME}}/src/github.com/esminc/esm-overlay
 
 - file: dest=/etc/portage/repos.conf state=directory
   become: yes
