gentoo-mirror/gentoo#master

--- a/playbooks/files/repos.conf/gentoo.conf
+++ b/playbooks/files/repos.conf/gentoo.conf
@@ -3,3 +3,4 @@ location = /usr/portage
 sync-type = git
 sync-uri = git://github.com/gentoo-mirror/gentoo.git
 auto-sync = yes
+sync-git-clone-extra-opts = --branch master
