--- a/playbooks/tasks/anyenv.yml
+++ b/playbooks/tasks/anyenv.yml
@@ -1,1 +1,3 @@
 - git: repo=git://github.com/riywo/anyenv.git dest={{ansible_env.HOME}}/.anyenv
+- file: path={{ansible_env.HOME}}/.anyenv/plugins state=directory
+- git: repo=git://github.com/znz/anyenv-update.git dest={{ansible_env.HOME}}/.anyenv/plugins/anyenv-update
