--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,10 +2,14 @@ set-option -g base-index 1
 set-option -g default-terminal "xterm-256color"
 set-option -g pane-base-index 1
 set-option -g prefix C-t
+set-option -g status-left "(#P) "
+set-option -g status-right "#T"
 set-option -sg escape-time 1
 
-set-window-option -g mouse
 set-window-option -g mode-keys vi
+set-window-option -g mouse
+set-window-option -g window-status-current-format "#I:#W"
+set-window-option -g window-status-format "#I:#W"
 
 bind-key t send-prefix
 bind-key C-t last-window
