tmux: set-titles

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,7 +1,8 @@
 set-option -g base-index 1
-set-option -g default-terminal screen-256color
 set-option -g pane-base-index 1
 set-option -g prefix C-t
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
 set-option -g status-left "(#P) "
 set-option -g status-right "#T"
 set-option -sg escape-time 1
