--- a/playbooks/roles/portage/files/gentoo.conf
+++ b/playbooks/roles/portage/files/gentoo.conf
@@ -1,6 +1,6 @@
 [gentoo]
 location = /usr/portage
 sync-type = git
-sync-uri = git://github.com/gentoo-mirror/gentoo.git
+sync-uri = https://github.com/gentoo-mirror/gentoo.git
 auto-sync = yes
 sync-git-clone-extra-opts = --branch master
