Use https for faster fetch

--- a/playbooks/roles/anyenv/tasks/main.yml
+++ b/playbooks/roles/anyenv/tasks/main.yml
@@ -1,3 +1,3 @@
-- git: repo=git://github.com/riywo/anyenv.git dest={{ansible_env.HOME}}/.anyenv
+- git: repo=https://github.com/riywo/anyenv.git dest={{ansible_env.HOME}}/.anyenv
 - file: path={{ansible_env.HOME}}/.anyenv/plugins state=directory
-- git: repo=git://github.com/znz/anyenv-update.git dest={{ansible_env.HOME}}/.anyenv/plugins/anyenv-update
+- git: repo=https://github.com/znz/anyenv-update.git dest={{ansible_env.HOME}}/.anyenv/plugins/anyenv-update
