--- a/dotfiles/config/fontconfig/fonts.conf
+++ b/dotfiles/config/fontconfig/fonts.conf
@@ -1,15 +1,31 @@
 <!-- vim: set ft=xml: -->
 
 <fontconfig>
-  <selectfont>
-    <rejectfont>
-      <glob>/usr/share/fonts/noto/*</glob>
-    </rejectfont>
+  <alias>
+    <family>sans-serif</family>
 
-    <acceptfont>
-      <glob>/usr/share/fonts/noto/NotoColorEmoji.ttf</glob>
-      <glob>/usr/share/fonts/noto/NotoSansCJKjp-*</glob>
-      <glob>/usr/share/fonts/noto/NotoSansMonoCJKjp-*</glob>
-    </acceptfont>
-  </selectfont>
+    <prefer>
+      <family>Noto Sans CJK JP</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>serif</family>
+
+    <prefer>
+      <family>Noto Serif CJK JP</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>monospace</family>
+
+    <prefer>
+      <family>Noto Mono</family>
+      <family>Noto Sans Mono CJK JP</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
 </fontconfig>
