--- a/playbooks/roles/esm-overlay/tasks/main.yml
+++ b/playbooks/roles/esm-overlay/tasks/main.yml
@@ -1,5 +1,8 @@
 - file: path={{ansible_env.HOME}}/src/github.com/esminc state=directory
-- git: repo=https://github.com/esminc/esm-overlay.git dest={{ansible_env.HOME}}/src/github.com/esminc/esm-overlay
+- git:
+    repo: https://github.com/esminc/esm-overlay.git
+    dest: '{{ansible_env.HOME}}/src/github.com/esminc/esm-overlay'
+    update: no
 
 - block:
   - file: dest=/etc/portage/repos.conf state=directory
