--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,4 +1,5 @@
 set-option -g base-index 1
+set-option -g default-terminal "screen-256color"
 set-option -g pane-base-index 1
 set-option -g prefix C-t
 set-option -g set-titles on
