--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,53 +1,13 @@
-set-option -g base-index 1
 set-option -g default-terminal "tmux-256color"
-set-option -g pane-base-index 1
-set-option -g prefix C-t
-set-option -g set-titles on
-set-option -g set-titles-string "#T"
-set-option -g status-left "(#P) "
-set-option -g status-right "#T"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -gs escape-time 1
 
-set-window-option -g mode-keys vi
-set-window-option -g mouse
-set-window-option -g window-status-current-format "#I:#W"
-set-window-option -g window-status-format "#I:#W"
+set-option -g mouse on
 
-bind-key t send-prefix
-bind-key C-t last-window
+set-option -g @plugin 'jimeh/tmux-themepack'
+set-option -g @plugin 'tmux-plugins/tmux-open'
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'tmux-plugins/tpm'
 
-#### COLOUR (Solarized 256)
+set-option -g @themepack 'basic'
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+run '~/.tmux/plugins/tpm/tpm'
