--- a/dotfiles/bundle/config
+++ b/dotfiles/bundle/config
@@ -3,3 +3,4 @@ BUNDLE_JOBS: "4"
 BUNDLE_GEM__TEST: "rspec"
 BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "false"
+BUNDLE_BUILD__CONTENT_TYPE: "--with-cflags=-Wno-error"
