--- a/dotfiles/config/fontconfig/fonts.conf
+++ b/dotfiles/config/fontconfig/fonts.conf
@@ -5,6 +5,7 @@
     <family>sans-serif</family>
 
     <prefer>
+      <family>Noto Sans</family>
       <family>Noto Sans CJK JP</family>
       <family>Noto Color Emoji</family>
     </prefer>
@@ -14,6 +15,7 @@
     <family>serif</family>
 
     <prefer>
+      <family>Noto Serif</family>
       <family>Noto Serif CJK JP</family>
       <family>Noto Color Emoji</family>
     </prefer>
@@ -23,7 +25,7 @@
     <family>monospace</family>
 
     <prefer>
-      <family>Noto Mono</family>
+      <family>Noto Sans Mono</family>
       <family>Noto Sans Mono CJK JP</family>
       <family>Noto Color Emoji</family>
     </prefer>
